# p2p-loans

./: .gitignore  Cargo.toml  README.md  diesel.toml  sample_code.txt
migrations/2024-07-23-112252_create_users/: up.sql
migrations/2024-07-23-113019_create_loans/: down.sql  up.sql
migrations/2024-07-23-113254_create_loan_applications/: down.sql  up.sql
migrations/2024-07-23-115519_add_date_columns/: up.sql
migrations/2024-07-25-080336_add_user_type/: up.sql
migrations/2024-07-25-082029_alter_loan_column_types/: up.sql
migrations/2024-09-23-155024_create_payments/: up.sql
migrations/2024-09-23-155239_add_payment_status_to_loan/: down.sql  up.sql
src/: main.rs  schema.rs
src/controllers/: dashboard.rs  loan_applications.rs  loans.rs  mod.rs  payments.rs  users.rs
src/db_operations/: loan_applications.rs  loans.rs  mod.rs  payments.rs  users.rs
src/models/: loan_applications.rs  loans.rs  mod.rs  payments.rs  ui.rs  users.rs
src/utils/: utils.rs
templates/: add-loan.html  applied-loans.html  base.html  complete-loan-payment.html  dashboard.html  index.html  lended-loans.html  login.html  mpesa-checkout.html  register.html
